UI: update debug module (#22)
* UI: add debug modal and fix python flowunit

* UI: add basicinfo and adjust debug modal

* UI: add favicon

* UI:fix card bug and update debug page

* UI:fix bug of demo page

* UI:template debug

* UI:fix bug of demo page stop button

* UI:add postman && imgtobase64

* UI: change debug modal

* UI: add report error in debug page

--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -29,6 +29,7 @@
           [onRunButtonClick]="handleRunButtonClick"
           [onStopButtonClick]="handleStopButtonClick"
           [onOpenTutorial]="handleTutorials"
+          (statusGraphEmitter)="statusGraphUpdate($event)"
           (currentProjectEmitter)="handleCurrentProjectChange($event)">
         </app-tool-bar-solution>
         <as-split-area [size]="80">
