UI: fix bug of debugpath && clear cache && change ico

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -103,8 +103,8 @@
             *ngIf="statusGraph === 2"
             dTooltip
             bsStyle="text-dark"
-            [content]="'toolBar.stopGraphButton' | translate"
-            (click)="handleStopButtonClick($event)">
+            [content]="'toolBar.restartGraphButton' | translate"
+            (click)="handleRestartButtonClick($event)">
             <img src={{restartSvg}} />
         </d-button>
 
