--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -48,6 +48,7 @@
               [onNewButtonClick]="handleNewClick.bind(this)"
               [onRunButtonClick]="handleRunButtonClick"
               [onStopButtonClick]="handleStopButtonClick"
+              [onRestartButtonClick]="handleRestartButtonClick"
               [onSwitchDirectionButtonClick]="handleSwitchDirectionButtonClick"
               [onCreateProjectButtonClick]="createProject"
               [showGraphSettingDialog]="showGraphSettingDialog.bind(this)"
@@ -60,7 +61,8 @@
               (refreshEmmiter)="refreshFlowunit($event)"
               (dotSrcEmmiter)="dotSrcUpdate($event)"
               (flowunitEmmiter)="updateDir($event)"
-              (projectPathEmmiter)="updateProjectPath($event)">
+              (projectPathEmmiter)="updateProjectPath($event)"
+              (saveProjectEmmiter)="saveCurrentProject()">
             </app-tool-bar>
 
             <div style="flex: 2;" class="graph">
