--- a/src/app/components/management/management.component.html
+++ b/src/app/components/management/management.component.html
@@ -174,11 +174,17 @@
                   </d-radio-group>
                 </div>
               </div>
-              <div style="width:50%;display:inline-block">
+              <div style="width:50%;display:inline-flex; justify-content:flex-end; align-items: center">
+                <div 
+                  *ngIf="guide"
+                  (click)="openstandardDialog('standard')"
+                  style="font-size: 18px; color:dodgerblue;cursor: pointer;margin-right:2em;">
+                  Guide
+                </div>
                 <div 
                   *ngIf="choose === 'Body'"
                   (click)="beautifyJson()"
-                  style="font-size: 18px; color:dodgerblue;cursor: pointer;float:right">
+                  style="font-size: 18px; color:dodgerblue;cursor: pointer">
                   Beautify
                 </div>
               </div>
