UI: fix save graph && search table

--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -163,3 +163,7 @@ d-card {
 .basic-usage ::ng-deep .devui-form-horizontal.devui-form-item {
     display: contents;
 }
+
+.table-style ::ng-deep td{
+    cursor: pointer;
+}
