UI: update demo page and debug

--- a/src/app/components/tool-bar-solution/tool-bar-solution.component.html
+++ b/src/app/components/tool-bar-solution/tool-bar-solution.component.html
@@ -107,8 +107,8 @@
         *ngIf="statusGraph === 'fault'"
         dTooltip
         bsStyle="text-dark"
-        [content]="'toolBar.stopGraphButton' | translate"
-        (click)="handleStopButtonClick($event)">
+        [content]="'toolBar.restartGraphButton' | translate"
+        (click)="handleRestartButtonClick($event)">
         <img src={{restartSvg}} />
     </d-button>
   </div>
