--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -52,6 +52,7 @@
               [onSwitchDirectionButtonClick]="handleSwitchDirectionButtonClick"
               [onCreateProjectButtonClick]="createProject"
               [showGraphSettingDialog]="showGraphSettingDialog.bind(this)"
+              [showGraphSelectDialog]="showGraphSelectDialog.bind(this)"
               [showSelectDialog]="showSelectDialog.bind(this)"
               [showSolutionDialog]="showSolutionDialog.bind(this)"
               [showCreateProjectDialog]="showCreateProjectDialog.bind(this)"
