--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -28,12 +28,15 @@
           [onSwitchDirectionButtonClick]="handleSwitchDirectionButtonClick"
           [onRunButtonClick]="handleRunButtonClick"
           [onStopButtonClick]="handleStopButtonClick"
+          [onRestartButtonClick]="handleRestartButtonClick"
           [onOpenTutorial]="handleTutorials"
           (statusGraphEmitter)="statusGraphUpdate($event)"
           (currentProjectEmitter)="handleCurrentProjectChange($event)">
         </app-tool-bar-solution>
         <as-split-area [size]="80">
           <div class="graph" id="graph">
+            <div id="graph-guide" style="position: fixed; height:40%;width:40%;top: 0; left: 0; right: 0; bottom: 0; margin: auto;">
+            </div>
             <app-graph
               [dotSrc]="dotSrc"
               [isResizing]="isResizing"
@@ -51,8 +54,10 @@
           </div>
         </as-split-area>
         <as-split-area [size]="20">
+          <div id="text-guide" style="position: fixed; bottom:20px; left: 0px; right: 0px; height: 50px;">
+          </div>
           <app-text-editor
-          id="text"
+            id="text"
             [dotSrc]="dotSrc"
             [onTextChange]="handleTextChange"
             [onFocus]="handleTextEditorFocus"
