--- a/src/app/components/solution/solution.component.less
+++ b/src/app/components/solution/solution.component.less
@@ -1,8 +1,8 @@
 .demo-page {
   padding : 0px;
-  height  : 100%-6px;
   width   : 100%;
   top     : 50px;
+  bottom  : 0px;
   position: absolute;
 }
 
@@ -26,4 +26,9 @@
   width           : 360px;
   box-shadow      : -8px 0 40px 0 rgba(0, 0, 0, 0.2);
   overflow        : auto;
+}
+
+::ng-deep #driver-highlighted-element-stage{
+  width:auto !important;
+  height: auto !important;
 }
