UI: fix split area

--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -35,7 +35,7 @@
         </app-tool-bar-solution>
         <as-split-area [size]="80">
           <div class="graph" id="graph">
-            <div id="graph-guide" style="position: fixed; height:40%;width:40%;top: 0; left: 0; right: 0; bottom: 0; margin: auto;">
+            <div id="graph-guide" style="position: fixed; height:40%;width:40%;top: 0; left: 0; right: 0; bottom: 0; margin: auto; z-index: -100">
             </div>
             <app-graph
               [dotSrc]="dotSrc"
