--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -9,7 +9,7 @@
 </div>
 <div class="sp-panel">
   <div class="ch-panel border" (click)="header.goExample()">
-    <div style="display: flex;align-items: center;justify-content: space-between;">
+    <div class="container-flex">
       <div class="first-icon icon-example">
       </div>
       <div class="title-ch-panel">
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="ch-panel border" (click)="header.goMain()">
-    <div style="display: flex;align-items: center;justify-content: space-between;">
+    <div class="container-flex">
       <div class="first-icon icon-arrange">
       </div>
       <div class="title-ch-panel">
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="ch-panel border" (click)="header.goTask()">
-    <div style="display: flex;align-items: center;justify-content: space-between;">
+    <div class="container-flex">
       <div class="first-icon icon-task">
       </div>
       <div class="title-ch-panel">
