--- a/src/app/components/solution/solution.component.less
+++ b/src/app/components/solution/solution.component.less
@@ -28,7 +28,27 @@
   overflow        : auto;
 }
 
-::ng-deep #driver-highlighted-element-stage{
-  width:auto !important;
+::ng-deep #driver-highlighted-element-stage {
+  width : auto !important;
   height: auto !important;
+}
+
+#graph-guide {
+  position: fixed;
+  height  : 40%;
+  width   : 40%;
+  top     : 0;
+  left    : 0;
+  right   : 0;
+  bottom  : 0;
+  margin  : auto;
+  z-index : -100;
+}
+
+#text-guide {
+  position: fixed;
+  bottom  : 20px;
+  left    : 0px;
+  right   : 0px;
+  height  : 50px;
 }
