--- a/src/styles.less
+++ b/src/styles.less
@@ -2,3 +2,33 @@
 * {
   box-sizing: border-box;
 }
+
+@black        : #1f1f1f;
+@light-black  : #333854;
+@lightest-grey: #dfe1e6;
+@light-grey   : #adb0b8;
+@darker-grey  : #8c8c8c;
+
+.flex-space-between {
+  display        : flex;
+  justify-content: space-between;
+  align-items    : center;
+}
+
+.flex-end {
+  display        : flex;
+  justify-content: space-between;
+  align-items    : center;
+}
+
+.flex-center {
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+}
+
+.ellipsis {
+  overflow     : hidden;
+  text-overflow: ellipsis;
+  white-space  : nowrap;
+}
