--- a/src/app/components/graph/graph.component.less
+++ b/src/app/components/graph/graph.component.less
@@ -1,19 +1,12 @@
-.graph-container {
-  position: relative;
-  width   : 100%;
-  height  : 100%;
-}
-
-.graph-busy-icon {
-  position: absolute;
-  top     : 20px;
-  left    : 20px;
-}
-
 .graph-svg {
   height: 100%;
   width : 1000px;
-  svg{
+
+  svg {
     height: 100%;
   }
+
+  position: relative;
+  width   :100%;
+  z-index :0;
 }
