--- a/src/app/components/header-main/header-main.component.less
+++ b/src/app/components/header-main/header-main.component.less
@@ -1,7 +1,7 @@
 .header-main {
   width           : 100%;
   height          : 50px;
-  background-color: #282b33 !important;
+  background-color: #282b33;
   display         : flex;
   justify-content : space-between;
   position        : fixed;
@@ -19,7 +19,7 @@
     .logo-text {
       display    : inline-block;
       font-size  : 14px;
-      color      : #ffffff;
+      color      : #fff;
       line-height: 24px;
       margin-left: 8px;
     }
@@ -62,7 +62,7 @@
     }
 
     .tab-active {
-      color        : #fff !important;
+      color        : #fff;
       border-bottom: 2px solid#96ADFA;
       font-weight  : 500;
       cursor       : pointer;
@@ -73,5 +73,10 @@
       color      : #ADB0B8;
       font-weight: 500;
     }
+  }
+
+  .container-pos {
+    position: fixed;
+    top     : 8px;
   }
 }
