--- a/src/app/components/insert-panels/insert-panels.component.html
+++ b/src/app/components/insert-panels/insert-panels.component.html
@@ -1,12 +1,13 @@
-<div style="padding-top:8px;padding-bottom:8px; margin-bottom:10px; font-weight: 600; text-align: center; box-shadow: 0px 4px 8px#dfe1e6">
+<div class="title-insert-panel">
   <span style="font-size:18px">
     {{ 'insertPanel.flowunitList' | translate}}
   </span>
-  <i class="icon icon-refresh"
-    style="margin-left: 20px;margin-bottom: 5px;cursor:pointer"
+  <i 
+    class="icon icon-refresh"
     (click)="refreshFlowunit()">
   </i>
 </div>
+
 <d-accordion
   id="main-accrodition"
   [data]="nodeShapeCategories"
