--- a/src/app/components/insert-panels/insert-panels.component.less
+++ b/src/app/components/insert-panels/insert-panels.component.less
@@ -1,5 +1,7 @@
+@import "../../../styles.less";
+
 #main-accrodition {
-    color: #282B33;
+    color: @black;
 
     .menu-block {
         white-space: nowrap;
@@ -23,14 +25,14 @@
     }
 
     .menu-detail:hover {
-        box-shadow: 0 0 3px 3px #DFE1E6, 0 4px 8px 0 rgba(0, 0, 0, 0.10);
+        box-shadow: 0 0 3px 3px @lightest-grey, 0 4px 8px 0 rgba(0, 0, 0, 0.10);
     }
 
     .cat-units-length {
         display    : inline-block;
         right      : 2px;
         font-size  : 12px;
-        color      : #8A8E99;
+        color      : @darker-grey;
         font-weight: 400;
     }
 
@@ -54,15 +56,22 @@
 .tips-block {
     display   : grid;
     text-align: left;
-    max-width     : 240px;
+    max-width : 240px;
     color     : white;
     height    : auto;
 }
 
-.tips-block-top {
-    display   : grid;
-    text-align: left;
-    width     : 240px;
-    color     : white;
-    height    : auto;
+.icon-refresh {
+    margin-left  : 20px;
+    margin-bottom: 5px;
+    cursor       : pointer;
+}
+
+.title-insert-panel {
+    padding-top   : 8px;
+    padding-bottom: 8px;
+    margin-bottom : 10px;
+    font-weight   : 600;
+    text-align    : center;
+    box-shadow    : 0px 4px 8px@lightest-grey
 }
