--- a/src/app/components/management/management.component.less
+++ b/src/app/components/management/management.component.less
@@ -1,6 +1,4 @@
-.reset-class {
-  width: 600px;
-}
+@import "../../../styles.less";
 
 .demo-page {
   padding : 0px;
@@ -11,7 +9,7 @@
 }
 
 ::ng-deep .ngx-json-viewer {
-  overflow: auto !important;
+  overflow: hidden !important;
 }
 
 .title-fieldset {
@@ -25,39 +23,18 @@
 .tool-bar-button {
   margin          : 8px 4px 0 4px;
   padding         : 4px 12px 4px 12px;
-  color           : #252B3A;
+  color           : @black;
   letter-spacing  : 0;
   text-align      : center;
   line-height     : 18px;
   background-color: #fff;
-  border          : 1px solid #ADB0B8;
+  border          : 1px solid @light-grey;
   border-radius   : 2px;
 }
 
 .app-ace-editor {
-  border    : 2px solid #f8f9fa;
+  border    : 2px solid @lightest-grey;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-}
-
-.mb10 {
-  margin-bottom: 10px;
-}
-
-.mr10 {
-  margin-right: 10px;
-}
-
-.tasklist-button {
-  background    : #C7000B;
-  border-radius : 2px;
-  border-radius : 2px;
-  font-size     : 12px;
-  color         : #FFFFFF;
-  letter-spacing: 0;
-  text-align    : center;
-  line-height   : 16px;
-  width         : 88px;
-  height        : 28px;
 }
 
 .tasklist-search-box-block {
@@ -82,13 +59,76 @@
   cursor        : pointer;
 }
 
-:scope {
-  ti-searchbox {
-    background   : #FFFFFF;
-    border       : 1px solid #ADB0B8;
-    border-radius: 2px;
-    border-radius: 2px;
-    width        : 300px;
-    height       : 28px;
+.bar {
+  display: inline-block;
+}
+
+.left-bar {
+  .bar();
+  width: 90%;
+
+  .method-select {
+    display: inline-block;
+    width  : 96px;
   }
+
+  .url-input {
+    display: inline-block;
+    width  : 700px;
+    margin : 0 4px 2px 4px;
+  }
+}
+
+.right-bar {
+  .bar();
+  width: 10%;
+
+  .button {
+    width      : 100%;
+    right      : 0;
+    line-height: 18px;
+  }
+}
+
+.template-select {
+  display: inline-block;
+  width  : 800px
+}
+
+.font-bar {
+  font-size: 18px;
+  color    : dodgerblue;
+  cursor   : pointer;
+  margin   : 0 4px 0 4px
+}
+
+.block {
+  width      : 50%;
+  height     : 100%;
+  margin     : 40px;
+  border     : 1px solid black;
+  position   : relative;
+  align-items: stretch;
+}
+
+.left-block {
+  .block();
+  display: inline-flex;
+
+  .input-block {
+    display       : table-cell;
+    width         : 100%;
+    vertical-align: middle;
+    text-align    : center;
+    top           : 0;
+    left          : 0;
+    right         : 0;
+    bottom        : 0;
+    margin        : auto;
+  }
+}
+
+.right-block {
+  .block();
+  display: inline-block;
 }
