--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -35,7 +35,7 @@
         </app-tool-bar-solution>
         <as-split-area [size]="80">
           <div class="graph" id="graph">
-            <div id="graph-guide" style="position: fixed; height:40%;width:40%;top: 0; left: 0; right: 0; bottom: 0; margin: auto; z-index: -100">
+            <div id="graph-guide">
             </div>
             <app-graph
               [dotSrc]="dotSrc"
@@ -54,7 +54,7 @@
           </div>
         </as-split-area>
         <as-split-area [size]="20">
-          <div id="text-guide" style="position: fixed; bottom:20px; left: 0px; right: 0px; height: 50px;">
+          <div id="text-guide">
           </div>
           <app-text-editor
             id="text"
