--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -1,12 +1,55 @@
+@import "../../../styles.less";
+
+.project-name {
+    font-size  : 28px;
+    font-weight: 500;
+}
+
+.graph-name {
+    font-size  : 14px;
+    font-weight: 400;
+    margin-top : 40px;
+}
+
+.project-drop-down {
+    display     : inline-block;
+    width       : 70px;
+    margin-right: 4px;
+}
+
+.flowunit-drop-down {
+    display: inline-block;
+    width  : 84px;
+}
+
+.card-out {
+    height: 160px;
+    margin: 8px;
+    border: 5px solid white;
+}
+
+.label-name {
+    width     : 100px;
+    text-align: center;
+}
+
+.tips-tip-content {
+    background-color: @light-black;
+    font-size       : 75%;
+    margin          : 20px;
+    padding         : 8px;
+    width           : 600px;
+}
+
 .tool-bar-button {
     margin          : 0 4px 0 4px;
     padding         : 4px 12px 4px 12px;
-    color           : #252B3A;
+    color           : @black;
     letter-spacing  : 0;
     text-align      : center;
     line-height     : 18px;
     background-color: #fff;
-    border          : 1px solid #ADB0B8;
+    border          : 1px solid @light-grey;
     border-radius   : 2px;
 }
 
@@ -20,7 +63,7 @@
     }
 
     li>a {
-        color: #252B3A;
+        color:  @light-black;
     }
 
     li.ti3-tab-active:not(.disabled)>a {
@@ -56,8 +99,8 @@
     height         : 44px;
     width          : 100%;
     right          : 10px;
-    background     : #FFFFFF;
-    box-shadow     : 0 1px 0 0 #DFE1E6, 0 4px 8px 0 rgba(0, 0, 0, 0.10);
+    background     : #fff;
+    box-shadow     : 0 1px 0 0 @lightest-grey, 0 4px 8px 0 rgba(0, 0, 0, 0.10);
     border-radius  : 0 2px 0 0;
     display        : flex;
     justify-content: space-between;
@@ -97,12 +140,12 @@
         & d-button {
             margin        : 0 4px 0 4px;
             font-size     : 12px;
-            color         : #252B3A;
+            color         : @black;
             letter-spacing: 0;
             text-align    : center;
             line-height   : 18px;
-            background    : #FFFFFF;
-            border        : 1px solid #ADB0B8;
+            background    : #fff;
+            border        : 1px solid @light-grey;
             border-radius : 2px;
             border-radius : 2px;
         }
@@ -163,15 +206,15 @@ d-card {
     display: contents;
 }
 
-.table-style ::ng-deep td{
+.table-style ::ng-deep td {
     cursor: pointer;
 }
 
 .dot-class {
-    height:24px;
+    height       : 24px;
     text-overflow: ellipsis;
-    white-space:nowrap;
-    max-width: 350px;
-    overflow:hidden; 
-    cursor: pointer;
+    white-space  : nowrap;
+    max-width    : 350px;
+    overflow     : hidden;
+    cursor       : pointer;
 }
